# learngit

./: Git.md  learn.md  learn_Doxygen.md  learn_vim.md
extract-feature/: .gitignore  CMakeLists.txt  package.xml
extract-feature/demo/: serilize.cpp
extract-feature/include/: dirManager.h  labelDataManager.h  parse.h  robo_calcfeature.h  seg_extract_based_box.h
extract-feature/include/common/box/: boxer.h
extract-feature/include/common/data_type/: basic_types.h  box_type.h  cluster_type.h  configuration_type.h  obj_type.h  perception_type.h  robo_types.h  target_type.h
extract-feature/include/common/free_space/: map_free_space.h
extract-feature/include/common/geometry/: cart_grid.h  geo_base.h  ground_initializer.h  polar_grid.h  transformer.h
extract-feature/include/common/math/: robo_math.h
extract-feature/include/common/wrapper/: box_wrapper.h
extract-feature/include/module_manager/: module_manager.h
extract-feature/launch/: feature.launch  feature_16.launch
extract-feature/scripts/: control_node.py
extract-feature/src/: dirManager.cpp  labelDataManager.cpp  parse.cpp  robo_calcfeature.cpp  seg_extract_based_box.cpp
extract-feature/usr_args/: 16.xml  32.xml  align.txt
